# platform

./: .env.example  README.md  docker-compose.yaml  package.json  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: build.yml
agentcrew/: Dockerfile  g2_tool.py  wikipedia_tool.py
agentcrew/nginx/: nginx.conf
agentflow/nginx/: nginx.conf
agentstudio/custom/: override.css
agentstudio/nginx/: nginx.conf
apps/content-api/: Dockerfile  pyproject.toml
apps/content-api/src/content_api/: config.py  main.py
apps/content-api/src/content_api/agents/: llm.py
apps/content-api/src/content_api/memory/: brand.py
apps/content-api/src/content_api/routers/: agents.py  brand.py  workflows.py
apps/content-orchestrator/: Dockerfile  pyproject.toml
apps/content-orchestrator/src/orchestrator/: activities.py  main.py  workflows.py
apps/content-studio/: Dockerfile  next.config.ts  package.json
apps/content-studio/src/app/: layout.tsx  page.tsx
apps/content-studio/src/app/brand/: page.tsx
apps/content-studio/src/app/create/: page.tsx
apps/content-studio/src/app/dashboard/: page.tsx
apps/content-studio/src/lib/: api.ts
caddy/: Caddyfile
db/: init-databases.sh
librechat/: librechat.yaml
marquez/: marquez.yml
ollama-mcp/: index.mjs
searxng/: settings.yml
simstudio-mcp/: index.mjs
