[project]
name = "content-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "temporalio>=1.7",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2",
  "agents",
]

[tool.uv.sources]
agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
